# DatarefW

./: .gitignore  LICENSE  README.md  datarefw.hpp
tests/: CMakeLists.txt  test.cpp
